Att with a list PokeApi and fixing bugs

--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -33,7 +33,7 @@
       }
 }
 
-.pokemons {
+.pokedex {
   padding: 50px $padding-horizontal;
   @media (max-width: $desktop_xsm) {
     padding: 50px $padding-horizontal-mobile;
