--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -2,8 +2,6 @@
 @import "styles/breakpoints";
 
 .menu {
-    position: fixed;
-    padding: 20px ;
     @media (max-width: $desktop_xsm) {
       padding: 20px $padding-horizontal-mobile;
     }
@@ -15,7 +13,27 @@
     }
   &__item{
     display: flex;
-    align-items: center; 
+    align-items: center;
   }
+  &__text{
+    color: $dark;
+      cursor: pointer;
+      font-size: 40px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: .2s ease;
+      &:hover {
+        color: $dark-grey;
+      }
+}
+
+}
+  .pokeIcons{
+    fill: #4F4F4F;
+    margin: 10px;
+    width:25px;
+    height:25px;
   }
-  
+  .text{
+    font-size: 40px;
+  }
