--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
   font-family: 'Josefin Sans', sans-serif;
   text-decoration: none !important;
 }
+#root > main.container {
+  display:flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
