--- a/src/pages/Pokemon/Pokemon.module.scss
+++ b/src/pages/Pokemon/Pokemon.module.scss
@@ -1,6 +1,44 @@
-@import "styles/variaveis";
-@import "styles/breakpoints";
+@import 'styles/variaveis';
+@import 'styles/breakpoints';
 
+.back {
+  background-color: transparent;
+  border: none;
+  color: $red;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.container {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.title{
+  font-size: 3rem;
+}
+.image {
+  width: 600px;
+  img {
+    border-radius: 8px;
+    width: 100%;
+  }
+}
+.content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  &__description {
+    color: $darkest-grey;
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+  &____details {
+    display: flex;
+    justify-content: space-between;
+  }
+}
 $grass: #9bcc50;
 $poison: #b97fc9;
 $fire: #fd7d24;
@@ -17,57 +55,29 @@ $dragon: #f16e57;
 $psychic: #f366b9;
 $rock: #a38c21;
 $ghost: #6232b1;
-
-
-.pokemon{
-  align-items: center;
-  max-width: 200px;
-  border: inset #856202;
-  border-radius: 0.8em;
-  justify-content: center;
-  &__image {
-    min-width: 100px;
-    @media (max-width: $desktop_xsm) {
-      width: 100%;
-    }
-    img {
-      border-radius: 8px;
-      width: 100%;
-    }
+.tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  max-width: 700px;
+  @media (max-width: $desktop_xsm) {
+    justify-content: flex-end;
   }
-  &__title {
-    h2 {
-        text-align: center;
-        margin:0;
-        font-size: 1.5rem;
-        font-weight: bold;
-    }
+  @media (max-width: $mobile) {
+    justify-content: flex-start;
   }
-  &__tags {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 700px;
-    @media (max-width: $desktop_xsm) {
-      justify-content: flex-end;
-    }
-    @media (max-width: $mobile) {
-      justify-content: flex-start;
-    }
-    > div {
-      margin: 4px;
-    }
+div {
+    margin: 10px;
   }
   &__type {
-    justify-content: center;
-    display:flex;
     align-items: center;
     border-radius: 2px;
-    width: 150px;
+    display: flex;
     font-weight: bold;
-    height: 20px;
-    
+    height: 40px;
+    justify-content: center;
+    padding: 10px 30px;
     &__grass {
       background-color: $grass;
       color: white;
@@ -132,19 +142,17 @@ $ghost: #6232b1;
       background-color: $electric;
       color: white;
     }
-
   }
   &__weight,
   &__height,
   &__category {
-    
-    margin-left: 10px;
+    align-items: center;
     display: flex;
-    font-size: 1.2rem;
+    font-size: 1.25rem;
     font-weight: bold;
-    
+    justify-content: center;
   }
-  &__category {
+  &__id {
     color: $red;
     font-size: 1.7rem;
   }
