--- a/src/pages/Pokedex/Pokedex.module.scss
+++ b/src/pages/Pokedex/Pokedex.module.scss
@@ -17,3 +17,29 @@
     
   }
 }
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.paginationContainer {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+
+.paginationItem {
+  margin: 0 5px;
+  cursor: pointer;
+  color: #333;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+}
+
+.paginationActive {
+  background-color: #007bff;
+  color: #fff;
+  border-color: #007bff;
+}
