--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,6 +1,6 @@
 @import 'styles/variaveis';
 .container {
-  background-image: url("/assets/splash.jpg");
+  background-image: url("/assets/notfound/splash.jpg");
   background-position: center;
   background-size: 60%;
   background-repeat: no-repeat;
