--- a/src/components/StandardPage/Header.module.scss
+++ b/src/components/StandardPage/Header.module.scss
@@ -2,7 +2,7 @@
 @import "styles/breakpoints";
 
 .header {
-    background-image: url("/assets/pokedex/header.jpeg");
+    background-image: url("/assets/header.jpeg");
     background-size:cover;
     background-repeat: no-repeat;
     height:400px;
