--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -12,3 +12,147 @@ $blue: #282b57;
 $red: #d73b3b;
 $red-dark: #c62a2a;
 $grey-null:#4F4F4F;
+
+   //Pokemons Types
+
+$grass: #9bcc50;
+$poison: #b97fc9;
+$fire: #fd7d24;
+$water: #025085;
+$flying: #3dc7ef;
+$ice: #51c4e7;
+$bug: #729f3f;
+$normal: #a4acaf;
+$electric: #eed535;
+$ground: #ab9842;
+$fairy: #fdb9e9;
+$fighting: #d52323;
+$dragon: #f16e57;
+$psychic: #f366b9;
+$rock: #a38c21;
+$ghost: #6232b1;
+
+
+a:link {
+  color: $dark;
+}
+
+/* visited link */
+a:visited {
+  color: $grey-null;
+}
+
+/* mouse over link */
+a:hover {
+  color: $blue;
+}
+
+/* selected link */
+a:active {
+  color: rgb(0, 0, 0);
+}
+
+.typesContainer {
+   display:flex;
+   justify-content: center;
+   gap: 60px;
+   
+    
+   &__type {
+    font-weight: bold; 
+    margin-left: 10px;
+    display: flex;
+    font-size: 1.2rem;
+    font-weight: bold;
+     &__grass {
+       background-color: $grass;
+       color: white;
+     }
+     &__poison {
+       background-color: $poison;
+       color: white;
+     }
+     &__fire {
+       background-color: $fire;
+       color: white;
+     }
+     &__water {
+       background-color: $water;
+       color: white;
+     }
+     &__ice {
+       background-color: $ice;
+       color: white;
+     }
+     &__flying {
+       background-color: $flying;
+       color: white;
+     }
+     &__ground {
+       background-color: $ground;
+       color: white;
+     }
+     &__ghost {
+       background-color: $ghost;
+       color: white;
+     }
+     &__fighting {
+       background-color: $fighting;
+       color: white;
+     }
+     &__fairy {
+       background-color: $fairy;
+       color: white;
+     }
+     &__rock {
+       background-color: $rock;
+       color: white;
+     }
+     &__psychic {
+       background-color: $psychic;
+       color: white;
+     }
+     &__dragon{
+       background-color: $dragon;
+       color: white;
+     }
+     &__normal {
+       background-color: $normal;
+       color: white;
+     }
+     &__bug {
+       background-color: $bug;
+       color: white;
+     }
+     &__electric {
+       background-color: $electric;
+       color: white;
+     }
+
+     &__grass,
+     &__poison,
+     &__fire,
+     &__water,
+     &__ice,
+     &__flying,
+     &__ground,
+     &__ghost,
+     &__fighting,
+     &__fairy,
+     &__rock,
+     &__psychic,
+     &__dragon,
+     &__normal,
+     &__bug,
+     &__electric {
+    padding-top:10px;
+    align-items: center;
+    border-radius: 10px;
+    font-weight: bold;
+    width: 90px; 
+    height: 25px;/* Defina o valor da largura aqui */
+    text-align: center;
+    text-align: center;
+   }
+ }
+}  
