--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,7 +1,14 @@
+@import "styles/variaveis";
+@import "styles/breakpoints";
+
 .aboutUs {
   display: flex;
   gap: 20px;
   margin-bottom: 50px;
+  @media (max-width: $desktop_md) {
+    flex-direction: column;
+    font-size: 1rem;
+  }
   &__text {
     display: flex;
     flex-direction: column;
@@ -9,6 +16,9 @@
     font-size: 1.5rem;
     font-weight: bold;
     text-align: justify;
+    @media (max-width: $mobile) {
+      font-size: 1.2rem;
+    }
 p {
       font-family: 'Josefin Sans', sans-serif;
     }
@@ -16,14 +26,14 @@ p {
 }
 .images {
   display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+  gap: 10px;
   justify-content: space-between;
   &__image {
     width: 600px;
     img {
-      border-radius: 5px;
+      align-items: center;
+      border-radius: 20px;
       width: 100%;
+      } 
     }
-  }
 }
