--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 
 *{
   font-family: 'Josefin Sans', sans-serif;
-  text-decoration: none !important;
+  text-decoration: none ;
 }
 #root > main.container {
   display:flex;
   flex-direction: column;
   min-height: 100vh;
 }
+
