--- a/src/pages/Pokedex/Pokemons/Pokemons.module.scss
+++ b/src/pages/Pokedex/Pokemons/Pokemons.module.scss
@@ -2,14 +2,15 @@
 @import "styles/breakpoints";
 
 .pokemon{
+  
   align-items: center;
-  max-width: 200px;
+  max-width: 220px;
   border: inset #856202;
   border-radius: 0.8em;
   cursor:pointer;
   justify-content: center;
   transition: .2s ease-in;
-  width: 90%;
+  width: 100%;
   &:hover {
     background-color: $grey;
   }
@@ -37,12 +38,6 @@
     flex-wrap: wrap;
     justify-content: center;
     max-width: 700px;
-    @media (max-width: $desktop_xsm) {
-      justify-content: flex-end;
-    }
-    @media (max-width: $mobile) {
-      justify-content: flex-start;
-    }
     > div {
       margin: 4px;
     }
@@ -50,14 +45,14 @@
   
   &__weight,
   &__height {
-    padding-left: 5px;
-    margin-left: 10px;
+    padding-left: 0.3em;
     font-size: 1.4rem;
     font-weight: bold;
+    
   }
   &__id {
     color: $red;
-    padding-left: 5px;
+    padding-left: 0.5em;
     font-size: 1.7rem;
   }
 }
