--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,5 @@
+@import "./breakpoints";
+
 $padding-horizontal-mobile: 100px;
 $padding-horizontal-sm: 150px;
 $padding-horizontal-md: 200px;
@@ -64,9 +66,11 @@ a:active {
     display: flex;
     font-size: 1.2rem;
     font-weight: bold;
+    
      &__grass {
        background-color: $grass;
        color: white;
+       
      }
      &__poison {
        background-color: $poison;
@@ -152,7 +156,7 @@ a:active {
     width: 90px; 
     height: 25px;/* Defina o valor da largura aqui */
     text-align: center;
-    text-align: center;
+    
    }
  }
 }  
