--- a/src/components/StandardPage/Header.module.scss
+++ b/src/components/StandardPage/Header.module.scss
@@ -10,6 +10,7 @@
     padding: 0 $padding-horizontal;
     @media (max-width: $desktop_xsm) {
         padding: 0px $padding-horizontal-mobile;
+        height:250px;
       }
       @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
         padding: 0px $padding-horizontal-sm;
