--- a/src/pages/Pokemon/Pokemon.module.scss
+++ b/src/pages/Pokemon/Pokemon.module.scss
@@ -24,6 +24,10 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
+  @media (max-width: $desktop_xsm) {
+     flex-direction: column;
+     margin-left:20px;
+  }
 }
       //Image
 
@@ -90,6 +94,9 @@
   }
 div {
     margin: 10px;
+    @media (max-width: $desktop_xsm) {
+      margin-right: 25px;
+    }
   }
   &__weight,
   &__height,
@@ -99,10 +106,15 @@ div {
     font-size: 1.25rem;
     font-weight: bold;
     justify-content: center;
+    @media (max-width: $desktop_xsm) {
+      margin-right: 30px;
+    }
   }
   &__id {
     color: $red;
     font-size: 1.7rem;
+    
+    }
   }
-}
+
 
