--- a/src/styles/Theme.module.scss
+++ b/src/styles/Theme.module.scss
@@ -4,17 +4,22 @@
 .container {
   padding: 50px $padding-horizontal;
   @media (max-width: $desktop_xsm) {
+    padding: 50px $padding-horizontal-mobile;
     .title{
+      margin-top: 0;
       text-align: center;
+      font-size: 1.8rem;
+
     }
     .subTitle{
       text-align: center;
     }
     .description{
-      text-align: center;
+      margin-bottom: 30px;
+      font-size: 1.8em;
     }
   
-    padding: 50px $padding-horizontal-mobile;
+   
   }
   @media (min-width: $desktop_xsm) and (max-width: $desktop_sm) {
     padding: 50px $padding-horizontal-sm;
