--- a/src/styles/Theme.module.scss
+++ b/src/styles/Theme.module.scss
@@ -8,15 +8,17 @@
     .title{
       margin-top: 0;
       text-align: center;
-      font-size: 1.8rem;
+      font-size: 2rem;
 
     }
     .subTitle{
       text-align: center;
+      font-size: 1.7rem;
     }
     .description{
       margin-bottom: 30px;
-      font-size: 1.8em;
+      font-size: 1.4rem;
+      text-align: center;
     }
   
    
