--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -8,6 +8,7 @@
   @media (max-width: $desktop_md) {
     flex-direction: column;
     font-size: 1rem;
+    margin-bottom: 0px;
   }
   &__text {
     display: flex;
@@ -34,6 +35,7 @@ p {
       align-items: center;
       border-radius: 20px;
       width: 100%;
+      margin-bottom: 30px;
       } 
     }
 }
