--- a/src/pages/Pokemon/Pokemon.module.scss
+++ b/src/pages/Pokemon/Pokemon.module.scss
@@ -67,6 +67,19 @@
   border-radius: 5px;
   overflow: hidden;
   margin-left:10px;
+  position: relative;
+}
+
+.statValue {
+  font-weight: bold;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
 
 .statBarFill {
