--- a/src/pages/Pokemon/Pokemon.module.scss
+++ b/src/pages/Pokemon/Pokemon.module.scss
@@ -71,7 +71,7 @@
 }
 
 .statValue {
-  font-weight: bold;
+  
   position: absolute;
   top: 0;
   left: 0;
@@ -80,6 +80,8 @@
   display: flex;
   align-items: center;
   justify-content: end;
+  font-weight: bold;
+  color:#ccc;
 }
 
 .statBarFill {
