--- a/src/pages/Pokemon/Pokemon.module.scss
+++ b/src/pages/Pokemon/Pokemon.module.scss
@@ -58,6 +58,9 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  @media (max-width: $mobile) {
+  font-size:12px;
+  }
 }
 
 .statBar {
@@ -72,21 +75,23 @@
 
 .statValue {
   
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: center;
   font-weight: bold;
-  color:#ccc;
+  font-size: 12px; /* Adjust the font size as needed */
+  white-space: nowrap;
 }
 
 .statBarFill {
   height: 100%;
-  background-color: #3f51b5;
+  border-radius: 5px;
+  background-color: #4caf50;
+  display: flex;
+  align-items: center;
+  color: #fff;
+  font-weight: bold;
+  overflow: hidden; 
 }
 
 .statName {
